--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,11 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "fontawesome": "~4.4.0"
+    "fontawesome": "~4.4.0",
+    "angular-base64-upload": "~0.1.12",
+    "angular-loading-bar": "~0.8.0",
+    "angular-i18n": "~1.4.3",
+    "angular-input-masks": "~2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -25,6 +29,9 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
+    },
+    "angular-i18n": {
+      "main": "angular-locale_pt-br.js"
     }
   }
 }
