--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-base64-upload": "~0.1.12",
     "angular-loading-bar": "~0.8.0",
     "angular-i18n": "~1.4.3",
-    "angular-input-masks": "~2.0.0"
+    "angular-input-masks": "~2.0.0",
+    "angular-growl-v2": "~0.7.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
