--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-loading-bar": "~0.8.0",
     "angular-i18n": "~1.4.3",
     "angular-input-masks": "~2.0.0",
-    "angular-growl-v2": "~0.7.5"
+    "angular-growl-v2": "~0.7.5",
+    "v-accordion": "~1.2.7",
+    "angular-bootstrap": "~0.13.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -33,6 +35,9 @@
     },
     "angular-i18n": {
       "main": "angular-locale_pt-br.js"
+    },
+    "angular-owl-carousel1": {
+      "main": "src/angular-owl-carousel.js"
     }
   }
 }
