--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-input-masks": "~2.0.0",
     "angular-growl-v2": "~0.7.5",
     "v-accordion": "~1.2.7",
-    "angular-bootstrap": "~0.13.3"
+    "angular-bootstrap": "~0.13.3",
+    "angular-ui-tinymce": "~0.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
